syntax = "proto3";

package customer;
option go_package = "github.com/MSFT/pkg/services/customer";

import "google/api/annotations.proto";
import "google/api/field_behavior.proto";
import "google/protobuf/timestamp.proto";

service OfficeService {
    rpc CreateOffice(CreateOfficeRequest) returns (CreateOfficeResponse) {
        option (google.api.http) = {
            post: "/customer/offices"
            body: "*"
        };
    }

    rpc GetOfficeList(GetOfficeListRequest) returns (GetOfficeListResponse) {
        option (google.api.http) = {
            get: "/customer/offices"
        };
    }

    rpc GetOfficeByUUID(GetOfficeByUUIDRequest) returns (GetOfficeByUUIDResponse) {
        option (google.api.http) = {
            get: "/customer/offices/uuid"
        };
    }
}

message CreateOfficeRequest {
    string name = 1 [(google.api.field_behavior) = REQUIRED];
    string address = 2 [(google.api.field_behavior) = REQUIRED];
}

message CreateOfficeResponse {}

message GetOfficeListRequest {}

message GetOfficeListResponse {
    repeated Office result = 1;
}

message GetOfficeByUUIDRequest {
    string office_uuid = 1 [(google.api.field_behavior) = REQUIRED];
}

message GetOfficeByUUIDResponse {
    Office result = 1;
}

message Office {
    string uuid = 1;
    string name = 2;
    string address = 3;
    google.protobuf.Timestamp created_at = 4;
}
